--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <script id="aclib" type="text/javascript" src="//acscdn.com/script/aclib.js"></script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>N300 ADS</title>
@@ -51,5 +52,11 @@
     <a href="https://n300music.company.site" target="_blank">Visit N300 Music</a>
     <p>Earn Money By Watching Ads</p>
     <a href="https://www.paypal.me/n300company" class="btn" target="_blank">Request Payment</a>
+
+      <script type="text/javascript">
+        aclib.runAutoTag({
+            zoneId: "7jracsgg3u",
+        });
+    </script>
 </body>
 </html>
