--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     <h1>N300 ADS</h1>
     <a href="https://n300.company.site" target="_blank">Visit N300</a>
     <a href="https://n300music.company.site" target="_blank">Visit N300 Music</a>
-    <p>Earn Money By Watching Ads</p>
+    <p>Earn Money By Clicking Ads</p>
     <a href="https://www.paypal.me/n300company" class="btn" target="_blank">Request Payment</a>
 
       <script id="aclib" type="text/javascript" src="//acscdn.com/script/aclib.js"></script>
